# SDI-SOCKET

./: CMakeLists.txt  Readme.md
cmake/: FindGMP.cmake  FindGMPXX.cmake  FindNTL.cmake  GetVersion.cmake  OPHELibConfig.cmake.in  UpdateSubmodules.cmake
data/: SYN_100000_6.txt
include/: config.hpp  entity.hpp  logging.hpp  protocol.hpp  query.hpp  segment.hpp  utility.hpp
include/interval-tree/: interval_tree.hpp
test/: experiment.cpp
